# gurmukhifix

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml  schema.sql
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-site.yml  publish.yml
.wrangler/cache/: pages.json
configs/: farsi.yaml  gurmukhi.yaml  punjabi.yaml  urdu.yaml
docs/: 404.html  CNAME  SECURITY_DESIGN_REVIEW.md  _headers  ai-policy.html  ai.txt  index.html  license.html  llms.txt  robots.txt  sitemap.xml
docs/.well-known/: tdmrep.json
docs/assets/: app.js  gurmukhifix.js  scriptfix.js  styles.css
docs/blog/: index.html
docs/scripts/: devanagari.html  farsi.html  gurmukhi.html  hindi.html  index.html  punjabi.html  urdu.html
gurmukhifix/: __init__.py  cli.py  config.py  corrector.py  diacritic.py  evidence.py  integration.py  learner.py  lexicon.py  ligature.py  ocr.py  validator.py
gurmukhifix/configs/: devanagari.yaml  farsi.yaml  gurmukhi.yaml  hindi.yaml  punjabi.yaml  urdu.yaml
gurmukhifix/data/: LEXICON.md
gurmukhifix/samples/: devanagari.json  punjabi.json
results/: metadata.json
scriptfix/: __init__.py  cli.py  config.py  corrector.py  diacritic.py  integration.py  learner.py  ligature.py  validator.py
tests/: __init__.py  benchmark.py  test_audit_improvements.py  test_cli.py  test_cli_dx.py  test_config.py  test_corrector.py  test_integration.py  test_learner.py  test_ligature_diacritic.py  test_no_corruption.py  test_ocr.py  test_security.py  test_validator.py  test_zero_corruption.py
tests/ground_truth/: README.md  gurbani_sggs.txt
tools/: build-site.mjs  build_lexicon.py
