[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scriptfix"
version = "0.1.0"
description = "Tesseract OCR post-processing engine for handwritten South Asian and Persian scripts"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "scriptfix contributors" }
]
keywords = ["ocr", "gurmukhi", "punjabi", "urdu", "hindi", "farsi", "tesseract", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "regex>=2023.0.0",
    "PyYAML>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
nlp = [
    "scikit-learn>=1.3",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
scriptfix = "scriptfix.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["scriptfix*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.package-data]
scriptfix = ["py.typed"]
