[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gurmukhifix"
version = "0.2.0"
description = "Safe, evidence-gated OCR post-processing for Gurmukhi and other Indic scripts"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "gurmukhifix contributors" }
]
keywords = ["ocr", "gurmukhi", "punjabi", "gurbani", "hindi", "devanagari", "tesseract", "surya", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "regex>=2023.0.0",
    "PyYAML>=6.0",
    "click>=8.1",
]

[project.urls]
Repository = "https://github.com/jsdosanj/gurmukhifix"
Issues = "https://github.com/jsdosanj/gurmukhifix/issues"

[project.optional-dependencies]
nlp = [
    "scikit-learn>=1.3",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "mypy>=1.8",
    "ruff>=0.4",
]

[project.scripts]
gurmukhifix = "gurmukhifix.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["gurmukhifix*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.package-data]
gurmukhifix = ["py.typed", "configs/*.yaml", "data/*.gz", "data/*.md", "samples/*.json"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [".venv", "dist", "build", "docs"]

[tool.ruff.lint]
# E/F  = pycodestyle + pyflakes, I = import sorting, UP = pyupgrade,
# B    = bugbear (likely bugs), SIM = readable simplifications.
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E203",   # whitespace before ':' — conflicts with common formatter output
    "SIM105", # keep explicit try/except/pass instead of contextlib.suppress
    "SIM108", # keep explicit if/else where it reads clearer than a ternary
    "B905",   # zip() without strict= is fine for the intentional pairings here
]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true

# Enforce full annotation coverage inside the package itself.
[[tool.mypy.overrides]]
module = "gurmukhifix.*"
disallow_untyped_defs = true

# Third-party deps that ship no type information / stubs.
[[tool.mypy.overrides]]
module = ["regex.*", "yaml.*", "sklearn.*"]
ignore_missing_imports = true
